--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 2.8)
 
 if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-  if(DEFINED ENV{DOLCESDK})
-    set(CMAKE_TOOLCHAIN_FILE "$ENV{DOLCESDK}/share/dolce.toolchain.cmake" CACHE PATH "toolchain file")
+  if(DEFINED ENV{VITASDK})
+    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
   else()
-    message(FATAL_ERROR "Please define DOLCESDK to point to your SDK path!")
+    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
   endif()
 endif()
 
 project(ecchi)
-include("${DOLCESDK}/share/dolce.cmake" REQUIRED)
+include("${VITASDK}/share/vita.cmake" REQUIRED)
+link_directories(${CMAKE_SOURCE_DIR}/src/lib)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
@@ -35,6 +36,6 @@ target_link_libraries(ecchi
 )
 
 
-dolce_create_self(ecchi.skprx ecchi
+vita_create_self(ecchi.skprx ecchi
   UNSAFE
 )
